--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
 body {
-	background: url('http://on-desktop.com/wps/Nature_Forest_Green_forest_004945_.jpg');
+	background: url(../img/bg.jpg);
 	background-attachment: fixed;
 	background-size: cover;
 	background-repeat: no-repeat;
