--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5,6 +5,20 @@ body {
 	background-repeat: no-repeat;
 	background-position: center;
 	color: #fff;
+	position: relative;
+	width: 100%;
+	min-height: 100vh;
+}
+
+body::before {
+	content: '';
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.6);
 }
 
 
@@ -30,6 +44,14 @@ body {
 	margin:  15px 0;
 	position: relative;
 	width: 100%;
+}
+.menu > ul li:last-child button {
+	background: gold;
+	color: #333;
+}
+
+.menu > ul li:last-child button:hover {
+	background: #e6ee39;
 }
 
 .menu ul ul li {
@@ -170,12 +192,31 @@ body {
 .option .remove:hover {
 	opacity: .7;
 }
-
-#content > *:not(.text)
-{
+#content > *{
 	text-transform: uppercase;
+	font-size: 1.2rem;
+}
+#content h5
+{
 	background: gold;
 	color: #333;
 	padding: 4px;
 	border-radius: 10px;
+}
+
+#content > * p{
+	text-transform: lowercase;
+	font-size: 1rem;
+}
+
+.modal-content {
+	background: #041423bf;
+	z-index: 5;
+	color: #fff;
+	padding: 15px;
+	border-radius: 10px;
+	border: 1px solid #333;
+	margin-left: 30px;
+	box-shadow: 0 0 10px 1px #2d995b, inset 0 0 10px 1px #2d995b;
+	border: 1px solid #2d995b;
 }
