--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3,7 +3,7 @@ body {
 	background-attachment: fixed;
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-position: center;
+	background-position: bottom;
 	color: #fff;
 	position: relative;
 	width: 100%;
@@ -18,9 +18,12 @@ body::before {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: rgba(0, 0, 0, 0.6);
+	background: rgba(0, 0, 0, 0.3);
 }
 
+.block-hide {
+	display: none;
+}
 
 .menu {height: 100%;}
 
@@ -69,7 +72,7 @@ body::before {
 	margin-bottom:0;
 }
 
-.menu ul li button {
+.menu ul li > button {
 	padding: 8px 20px;
 	background: #2d995b;
 	color: #fff;
@@ -219,4 +222,258 @@ body::before {
 	margin-left: 30px;
 	box-shadow: 0 0 10px 1px #2d995b, inset 0 0 10px 1px #2d995b;
 	border: 1px solid #2d995b;
+}
+
+.info-loop{
+    -webkit-animation: color-change 1s infinite;
+    -moz-animation: color-change 1s infinite;
+    -o-animation: color-change 1s infinite;
+    -ms-animation: color-change 1s infinite;
+    animation: color-change 1s infinite;
+}
+
+@-webkit-keyframes color-change {
+    0% { color: red; }
+    50% { color: blue; }
+    100% { color: red; }
+}
+@-moz-keyframes color-change {
+    0% { color: red; }
+    50% { color: blue; }
+    100% { color: red; }
+}
+@-ms-keyframes color-change {
+    0% { color: red; }
+    50% { color: blue; }
+    100% { color: red; }
+}
+@-o-keyframes color-change {
+    0% { color: red; }
+    50% { color: blue; }
+    100% { color: red; }
+}
+@keyframes color-change {
+    0% { color: red; }
+    50% { color: blue; }
+    100% { color: red; }
+}
+
+.popover {
+	background: none;
+}
+.popover-body {
+	background: #041423bf;
+    z-index: 5;
+    color: #fff;
+    padding: 15px;
+    border-radius: 10px;
+    border: 1px solid #333;
+    box-shadow: 0 0 10px 1px #2d995b, inset 0 0 10px 1px #2d995b;
+    border: 1px solid #2d995b;
+}
+
+.bs-popover-auto[x-placement^=right] .arrow:after, .bs-popover-right .arrow:after {
+	border-right-color: #2d995b;
+}
+
+.menu-button-mobi,
+.drop-button-mobi {
+	border: none;
+	background: #041423bf;
+	color: #fff;
+	box-shadow: 0 0 10px 1px #2d995b, inset 0 0 10px 1px #2d995b;
+	border: 1px solid #2d995b;
+	border-radius: 4px;
+	
+	display: none;
+}
+.menu-button-mobi {
+	padding: 5px 15px;
+	font-size: 1.5em;
+}
+.drop-button-mobi {
+	padding: 5px 10px;
+	font-size: 1em;
+	margin-bottom: 20px;
+}
+
+.bg-menu {
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,.6);
+	position: fixed;
+	top: 0;
+	z-index: 10;
+}
+
+@media screen and (max-width: 430px)
+{
+	.menu-button-mobi,
+	.drop-button-mobi
+	 {
+		display: block;
+		position: absolute;
+		right: 15px;
+		z-index: 123;
+	}
+	.menu {
+		padding-bottom: 60px;
+		z-index: 11;
+		position: relative;
+	}
+	.menu > ul {
+		display: none;
+	}
+
+	.menu > ul > li {
+		position: unset;
+	}
+	
+	.menu ul li button + div {
+	    display: none;
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    z-index: 5;
+	    width: 100%;
+	    height: -webkit-fill-available;
+	    margin: 0;
+	    padding: 15px;
+	    border-radius: 10px;
+	    border: 1px solid #333;
+	    box-shadow: 0 0 10px 1px #2d995b, inset 0 0 10px 1px #2d995b;
+	    border: 1px solid #2d995b;
+	}
+}
+
+
+
+.bg-loader {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  background-color: #1D1F20;
+}
+
+.loader {
+  position: relative;
+  background-color: #B9E9BB;
+  width: 12px;
+  height: 12px;
+  border-radius: 3px;
+  -webkit-animation: 1.4s linear infinite;
+          animation: 1.4s linear infinite;
+  -webkit-animation-name: uu2ys9s3v;
+          animation-name: uu2ys9s3v;
+}
+@-webkit-keyframes uu2ys9s3v {
+  20% {
+    -webkit-transform: rotate(-30deg) scale(1);
+            transform: rotate(-30deg) scale(1);
+  }
+  50% {
+    -webkit-transform: rotate(360deg) scale(4);
+            transform: rotate(360deg) scale(4);
+    background-color: white;
+  }
+  80% {
+    -webkit-transform: rotate(720deg) scale(0.8);
+            transform: rotate(720deg) scale(0.8);
+  }
+  90%, 100% {
+    -webkit-transform: rotate(720deg) scale(1);
+            transform: rotate(720deg) scale(1);
+    background-color: #B9E9BB;
+  }
+}
+@keyframes uu2ys9s3v {
+  20% {
+    -webkit-transform: rotate(-30deg) scale(1);
+            transform: rotate(-30deg) scale(1);
+  }
+  50% {
+    -webkit-transform: rotate(360deg) scale(4);
+            transform: rotate(360deg) scale(4);
+    background-color: white;
+  }
+  80% {
+    -webkit-transform: rotate(720deg) scale(0.8);
+            transform: rotate(720deg) scale(0.8);
+  }
+  90%, 100% {
+    -webkit-transform: rotate(720deg) scale(1);
+            transform: rotate(720deg) scale(1);
+    background-color: #B9E9BB;
+  }
+}
+.loader:before, .loader:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #6bd170;
+  border-radius: 3px;
+}
+.loader:before {
+  right: calc(100% + 2px);
+  -webkit-animation: 1.4s 0.2s ease infinite;
+          animation: 1.4s 0.2s ease infinite;
+  -webkit-animation-name: uu2ys9s44;
+          animation-name: uu2ys9s44;
+}
+@-webkit-keyframes uu2ys9s44 {
+  65% {
+    -webkit-transform: translate(-200%, -100%) scale(0.2) rotate(-180deg);
+            transform: translate(-200%, -100%) scale(0.2) rotate(-180deg);
+    background-color: white;
+  }
+  70%, 100% {
+    -webkit-transform: translate(0, 0) scale(1) rotate(-360deg);
+            transform: translate(0, 0) scale(1) rotate(-360deg);
+    background-color: #6bd170;
+  }
+}
+@keyframes uu2ys9s44 {
+  65% {
+    -webkit-transform: translate(-200%, -100%) scale(0.2) rotate(-180deg);
+            transform: translate(-200%, -100%) scale(0.2) rotate(-180deg);
+    background-color: white;
+  }
+  70%, 100% {
+    -webkit-transform: translate(0, 0) scale(1) rotate(-360deg);
+            transform: translate(0, 0) scale(1) rotate(-360deg);
+    background-color: #6bd170;
+  }
+}
+div:after {
+  left: calc(100% + 2px);
+  -webkit-animation: 1.4s 0.2s ease infinite;
+          animation: 1.4s 0.2s ease infinite;
+  -webkit-animation-name: uu2ys9s47;
+          animation-name: uu2ys9s47;
+}
+@-webkit-keyframes uu2ys9s47 {
+  65% {
+    -webkit-transform: translate(200%, 100%) scale(0.2) rotate(180deg);
+            transform: translate(200%, 100%) scale(0.2) rotate(180deg);
+    background-color: white;
+  }
+  70%, 100% {
+    -webkit-transform: translate(0, 0) scale(1) rotate(360deg);
+            transform: translate(0, 0) scale(1) rotate(360deg);
+    background-color: #6bd170;
+  }
+}
+@keyframes uu2ys9s47 {
+  65% {
+    -webkit-transform: translate(200%, 100%) scale(0.2) rotate(180deg);
+            transform: translate(200%, 100%) scale(0.2) rotate(180deg);
+    background-color: white;
+  }
+  70%, 100% {
+    -webkit-transform: translate(0, 0) scale(1) rotate(360deg);
+            transform: translate(0, 0) scale(1) rotate(360deg);
+    background-color: #6bd170;
+  }
 }
