--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,7 +13,7 @@ body {
 body::before {
 	content: '';
 	display: block;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -23,6 +23,79 @@ body::before {
 
 .block-hide {
 	display: none;
+}
+
+#pre-page {
+	z-index: 9999;
+	display: flex;
+	width: 100%;
+	height: 100vh;
+	justify-content: center;
+	align-items: center;
+	background: url("../img/pre-page.jpg");
+	-webkit-background-size:cover;
+	background-size:cover;
+	position: absolute;
+	top: 0;
+	left: 0;
+	opacity: 1;
+	transition: opacity .3s;
+}
+
+#pre-page.disabled {
+	z-index: -100;
+	opacity: 0;
+}
+
+.page-body {
+	color: #fff;
+	text-align: center;
+	width: 75%;
+	font-size: 140%;
+	text-shadow: 1px 1px 3px #000;
+}
+
+.page-body header h1 {
+	text-transform: uppercase;
+	letter-spacing: 5px;
+}
+
+.page-body header *:nth-child(2){
+	text-transform: uppercase;
+	text-decoration: underline;
+}
+
+div#certificate {
+	position: fixed;
+	bottom: 0;
+	width: 100%;
+}
+
+#certificate a {
+	display: flex;
+	text-transform: uppercase;
+	background: #212529;
+	color: #fff;
+	justify-content: center;
+	text-decoration: none;
+	font-weight: 900;
+	padding: 11px 0;
+	font-family: sans-serif;
+}
+
+#certificate a:hover {
+	background: darkorange;
+}
+
+
+#app {
+	transition: opacity .3s ease;
+	opacity: 1;
+	z-index: 99999;
+}
+#app.disabled {
+	opacity: 0;
+	z-index: 0;
 }
 
 .menu {height: 100%;}
@@ -48,14 +121,14 @@ body::before {
 	position: relative;
 	width: 100%;
 }
-.menu > ul li:last-child button {
-	background: gold;
-	color: #333;
-}
+/*.menu > ul li:last-child button {*/
+	/*background: gold;*/
+	/*color: #333;*/
+/*}*/
 
-.menu > ul li:last-child button:hover {
-	background: #e6ee39;
-}
+/*.menu > ul li:last-child button:hover {*/
+	/*background: #e6ee39;*/
+/*}*/
 
 .menu ul ul li {
 	margin:  0;
@@ -74,7 +147,8 @@ body::before {
 
 .menu ul li > button {
 	padding: 8px 20px;
-	background: #2d995b;
+	/*background: #2d995b;*/
+	background: #0de669;
 	color: #fff;
 	text-decoration: none;
 	transition: all .5s;
@@ -107,10 +181,20 @@ body::before {
 }
 .menu ul li button + div.show {
 	display: block;
+	z-index: 999999;
 }
 .menu ul li button span {
 	position: absolute;
 	right: 20px;
+}
+
+.open-menu {
+	z-index: 9999;
+	position: absolute;
+	width:100%;
+	height: 100%;
+	top: 0;
+	left: 0;
 }
 
 .menu ul ul li a {
@@ -447,7 +531,7 @@ body::before {
   }
 }
 div:after {
-  left: calc(100% + 2px);
+  /*left: calc(100% + 2px);*/
   -webkit-animation: 1.4s 0.2s ease infinite;
           animation: 1.4s 0.2s ease infinite;
   -webkit-animation-name: uu2ys9s47;
@@ -476,4 +560,325 @@ div:after {
             transform: translate(0, 0) scale(1) rotate(360deg);
     background-color: #6bd170;
   }
+}
+
+
+/*.content {*/
+	/*position: absolute;*/
+	/*top: 50%;*/
+	/*left: 50%;*/
+	/*-webkit-transform: translate(-50%, -50%);*/
+	/*transform: translate(-50%, -50%);*/
+	/*height: 160px;*/
+	/*overflow: hidden;*/
+	/*font-family: 'Lato', sans-serif;*/
+	/*font-size: 35px;*/
+	/*line-height: 40px;*/
+	/*color: #ecf0f1;*/
+/*}*/
+
+.content{
+	position: relative;
+	width: fit-content;
+	top: 50%;
+	left: 50%;
+	-webkit-transform: translate(-50%, -50%);
+	transform: translate(-50%, 0%);
+	height: 60px;
+	overflow: hidden;
+	font-family: 'Lato', sans-serif;
+	font-size: 35px;
+	line-height: 40px;
+	color: #ecf0f1;
+}
+
+.content__container {
+	font-weight: 600;
+	overflow: hidden;
+	height: 40px;
+	padding: 0 40px;
+}
+.content__container:before {
+	content: '[';
+	left: 0;
+}
+.content__container:after {
+	content: ']';
+	position: absolute;
+	right: 0;
+}
+.content__container:after, .content__container:before {
+	position: absolute;
+	top: 0;
+	color: #16a085;
+	font-size: 42px;
+	line-height: 40px;
+	-webkit-animation-name: opacity;
+	-webkit-animation-duration: 2s;
+	-webkit-animation-iteration-count: infinite;
+	animation-name: opacity;
+	animation-duration: 2s;
+	animation-iteration-count: infinite;
+}
+.content__container__text {
+	display: inline;
+	float: left;
+	margin: 0;
+}
+.content__container__list {
+	margin-top: 0;
+	padding-left: 280px;
+	text-align: left;
+	list-style: none;
+	-webkit-animation-name: change;
+	-webkit-animation-duration: 10s;
+	-webkit-animation-iteration-count: infinite;
+	animation-name: change;
+	animation-duration: 10s;
+	animation-iteration-count: infinite;
+}
+.content__container__list__item {
+	line-height: 40px;
+	margin: 0;
+}
+
+@-webkit-keyframes opacity {
+	0%, 100% {
+		opacity: 0;
+	}
+	50% {
+		opacity: 1;
+	}
+}
+@-webkit-keyframes change {
+	0%, 12.66%, 100% {
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	}
+	16.66%, 29.32% {
+		-webkit-transform: translate3d(0, -25%, 0);
+		transform: translate3d(0, -25%, 0);
+	}
+	33.32%,45.98% {
+		-webkit-transform: translate3d(0, -50%, 0);
+		transform: translate3d(0, -50%, 0);
+	}
+	49.98%,62.64% {
+		-webkit-transform: translate3d(0, -75%, 0);
+		transform: translate3d(0, -75%, 0);
+	}
+	66.64%,79.3% {
+		-webkit-transform: translate3d(0, -50%, 0);
+		transform: translate3d(0, -50%, 0);
+	}
+	83.3%,95.96% {
+		-webkit-transform: translate3d(0, -25%, 0);
+		transform: translate3d(0, -25%, 0);
+	}
+}
+@keyframes opacity {
+	0%, 100% {
+		opacity: 0;
+	}
+	50% {
+		opacity: 1;
+	}
+}
+@keyframes change {
+	0%, 12.66%, 100% {
+		-webkit-transform: translate3d(0, 0, 0);
+		transform: translate3d(0, 0, 0);
+	}
+	16.66%, 29.32% {
+		-webkit-transform: translate3d(0, -25%, 0);
+		transform: translate3d(0, -25%, 0);
+	}
+	33.32%,45.98% {
+		-webkit-transform: translate3d(0, -50%, 0);
+		transform: translate3d(0, -50%, 0);
+	}
+	49.98%,62.64% {
+		-webkit-transform: translate3d(0, -75%, 0);
+		transform: translate3d(0, -75%, 0);
+	}
+	66.64%,79.3% {
+		-webkit-transform: translate3d(0, -50%, 0);
+		transform: translate3d(0, -50%, 0);
+	}
+	83.3%,95.96% {
+		-webkit-transform: translate3d(0, -25%, 0);
+		transform: translate3d(0, -25%, 0);
+	}
+}
+
+* {
+	box-sizing: border-box;
+}
+
+
+.m-image {
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	position: fixed;
+	z-index: 1233;
+}
+
+.m-image.disabled {
+	opacity: 0;
+	z-index: -1;
+}
+
+.m-image__bar {
+	overflow: hidden;
+	width: 12.5%;
+	height: 100vh;
+	/*border-right: 1px solid rgba(255, 255, 255, 0);*/
+	position: relative;
+	will-change: transform;
+	opacity: 0;
+}
+.m-image__bar:last-child {
+	border-right: none;
+}
+.m-image__bar-image {
+	/*background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/22914/20170606-DSCF1188.jpg);*/
+	background-image: url(../img/bg.jpg);
+	background-size: cover;
+	background-position: center;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100vw;
+	height: 100vh;
+}
+.m-image__bar:nth-child(1) .m-image__bar-image {
+	left: 0vw;
+}
+.m-image__bar:nth-child(2) .m-image__bar-image {
+	left: -12.5vw;
+}
+.m-image__bar:nth-child(3) .m-image__bar-image {
+	left: -25vw;
+}
+.m-image__bar:nth-child(4) .m-image__bar-image {
+	left: -37.5vw;
+}
+.m-image__bar:nth-child(5) .m-image__bar-image {
+	left: -50vw;
+}
+.m-image__bar:nth-child(6) .m-image__bar-image {
+	left: -62.5vw;
+}
+.m-image__bar:nth-child(7) .m-image__bar-image {
+	left: -75vw;
+}
+.m-image__bar:nth-child(8) .m-image__bar-image {
+	left: -87.5vw;
+}
+.m-image__bar--animated {
+	-webkit-animation-duration: 1s;
+	animation-duration: 1s;
+	-webkit-animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
+}
+.m-image__bar--animated:nth-child(1) {
+	-webkit-animation-delay: 0s;
+	animation-delay: 0s;
+}
+.m-image__bar--animated:nth-child(2) {
+	-webkit-animation-delay: 0.15s;
+	animation-delay: 0.15s;
+}
+.m-image__bar--animated:nth-child(3) {
+	-webkit-animation-delay: 0.3s;
+	animation-delay: 0.3s;
+}
+.m-image__bar--animated:nth-child(4) {
+	-webkit-animation-delay: 0.45s;
+	animation-delay: 0.45s;
+}
+.m-image__bar--animated:nth-child(5) {
+	-webkit-animation-delay: 0.6s;
+	animation-delay: 0.6s;
+}
+.m-image__bar--animated:nth-child(6) {
+	-webkit-animation-delay: 0.75s;
+	animation-delay: 0.75s;
+}
+.m-image__bar--animated:nth-child(7) {
+	-webkit-animation-delay: 0.9s;
+	animation-delay: 0.9s;
+}
+.m-image__bar--animated:nth-child(8) {
+	-webkit-animation-delay: 1.05s;
+	animation-delay: 1.05s;
+}
+
+/*
+ * Animate CSS
+*/
+@-webkit-keyframes flipInY {
+	from {
+		-webkit-transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
+		transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
+		-webkit-animation-timing-function: ease-in;
+		animation-timing-function: ease-in;
+		opacity: 0;
+	}
+	40% {
+		-webkit-transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
+		transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
+		-webkit-animation-timing-function: ease-in;
+		animation-timing-function: ease-in;
+	}
+	60% {
+		-webkit-transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
+		transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
+		opacity: 1;
+	}
+	80% {
+		-webkit-transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
+		transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
+	}
+	to {
+		-webkit-transform: perspective(400px);
+		transform: perspective(400px);
+		opacity: 1;
+	}
+}
+@keyframes flipInY {
+	from {
+		-webkit-transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
+		transform: perspective(400px) rotate3d(0, 1, 0, 90deg);
+		-webkit-animation-timing-function: ease-in;
+		animation-timing-function: ease-in;
+		opacity: 0;
+	}
+	40% {
+		-webkit-transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
+		transform: perspective(400px) rotate3d(0, 1, 0, -20deg);
+		-webkit-animation-timing-function: ease-in;
+		animation-timing-function: ease-in;
+	}
+	60% {
+		-webkit-transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
+		transform: perspective(400px) rotate3d(0, 1, 0, 10deg);
+		opacity: 1;
+	}
+	80% {
+		-webkit-transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
+		transform: perspective(400px) rotate3d(0, 1, 0, -5deg);
+	}
+	to {
+		-webkit-transform: perspective(400px);
+		transform: perspective(400px);
+		opacity: 1;
+	}
+}
+.flipInY {
+	-webkit-backface-visibility: visible;
+	backface-visibility: visible;
+	-webkit-animation-name: flipInY;
+	animation-name: flipInY;
 }
