--- a/public/css/main.css
+++ b/public/css/main.css
@@ -39,12 +39,16 @@ body::before {
 	background: url("../img/pre-page.jpg");
 	-webkit-background-size:cover;
 	background-size:cover;
-	position: absolute;
+	background-attachment: fixed;
+	position: fixed;
 	top: 0;
 	left: 0;
 	opacity: 1;
 	transition: opacity .3s;
+	overflow-y: auto;
 }
+
+
 
 #pre-page.disabled {
 	z-index: -100;
@@ -57,6 +61,19 @@ body::before {
 	width: 75%;
 	font-size: 140%;
 	text-shadow: 1px 1px 3px #000;
+}
+
+@media screen and (max-width: 576px){
+	.page-body {
+		color: #fff;
+		text-align: center;
+		width: 75%;
+		height: 100vh;
+		overflow: auto;
+		font-size: 100%;
+		text-shadow: 1px 1px 3px #000;
+		padding: 20px 0;
+	}
 }
 
 .page-body header h1 {
@@ -85,6 +102,16 @@ div#certificate {
 	font-weight: 900;
 	padding: 11px 0;
 	font-family: sans-serif;
+}
+
+@media screen and (max-width: 425px) {
+	#certificate a {
+		font-size: 13px;
+		text-align: center;
+		font-weight: 100;
+		text-transform: lowercase;
+		padding: 2px 5px;
+	}
 }
 
 #certificate a:hover {
